--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,12 @@
 {
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.10",
     "prisma": "^6.11.0",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
@@ -10,8 +14,13 @@
     "@prisma/extension-accelerate": "^2.0.1",
     "@types/bcryptjs": "^3.0.0",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10"
+  },
+  "scripts": {
+    "dev": "ts-node-dev --respawn src/app.ts"
   }
 }
