--- a/verse-abyss/package.json
+++ b/verse-abyss/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-icons": "^1.3.2",
     "next": "15.3.5",
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "zod": "^3.25.73"
   },
   "devDependencies": {
